# ChangeLog for dev-util/glade
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/glade/ChangeLog,v 1.109 2008/09/12 14:55:37 jer Exp $

  12 Sep 2008; Jeroen Roovers <jer@gentoo.org> glade-3.4.5.ebuild:
  Stable for HPPA (bug #235522).

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> glade-3.4.5.ebuild:
  alpha/ia64 stable wrt #235522

  24 Aug 2008; nixnut <nixnut@gentoo.org> glade-3.4.5.ebuild:
  Stable on ppc wrt bug 235522

  24 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> glade-3.4.5.ebuild:
  Stable on sparc, bug #235522

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> glade-3.4.5.ebuild:
  Stable on ppc64; bug #235522

  23 Aug 2008; Markus Meier <maekke@gentoo.org> glade-3.4.5.ebuild:
  amd64/x86 stable, bug #235522

  08 Aug 2008; Alexis Ballier <aballier@gentoo.org> glade-3.4.5.ebuild:
  keyword ~x86-fbsd thanks to Davide Italiano <dav_it@gentoo.org>, bug
  #233138

*glade-3.4.5 (03 Jul 2008)

  03 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/glade-2.0.0-scrollkeeper.patch, -glade-2.12.1.ebuild,
  -glade-3.4.0-r1.ebuild, -glade-3.4.1-r1.ebuild, -glade-3.4.3.ebuild,
  +glade-3.4.5.ebuild:
  bump to 3.4.5. Fixed annoying text editing bug. Close bug #227915.

  16 May 2008; nixnut <nixnut@gentoo.org> glade-2.12.2-r1.ebuild:
  Stable on ppc wrt bug 201962

  16 May 2008; Markus Rothe <corsair@gentoo.org> glade-2.12.2-r1.ebuild:
  Stable on ppc64; bug #201962

  15 May 2008; Raúl Porcel <armin76@gentoo.org> glade-2.12.2-r1.ebuild:
  alpha stable wrt #201962

  15 May 2008; Ferris McCormick <fmccor@gentoo.org> glade-2.12.2-r1.ebuild:
  Sparc stable, Bug #201962.

  14 May 2008; Markus Meier <maekke@gentoo.org> glade-2.12.2-r1.ebuild:
  amd64/x86 stable, bug #201962

*glade-3.4.4 (20 Apr 2008)

  20 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> +glade-3.4.4.ebuild:
  bump to 3.4.4. Mostly translation updates, a few bug fixes.
