@@ -1,10 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST glade-2.12.2.tar.bz2 1785723 RMD160 6035749c249492279794d508d3558a8aac17b6f0 SHA1 a43d89b147296244ba4b2efc67e8772d5155afff SHA256 50712d1e5cb369ee1399e9c78ac410e3e69c7582ac9bf1e11d27a7348d3d0a58
-DIST glade3-3.4.0.tar.bz2 1493286 RMD160 2f703f14f46f5a35c8d39f899e87d7a3d83093cf SHA1 79710d932db8fdd19a5aff21727af14059d16763 SHA256 af16831ee69f4e323175e0d3710ddc081bbd598abad711cfa141f8a0a9e60331
-DIST glade3-3.4.4.tar.bz2 1744631 RMD160 835ace9c4817497578056ee57be461cd520a7968 SHA1 a16980da8bccc15c2e198e6fddc8837d10275486 SHA256 b8bf6d871b99b0a3e0e672c6856715031119871516b06b18881d338736657575
 DIST glade3-3.4.5.tar.bz2 1777173 RMD160 3fa7df673d1ca2106f1327aebc8c714eafa42dab SHA1 6f6e144a07edd0446f031bc40abcde8e9437c7f6 SHA256 4e83ee1ce3832232f3dfcab9efaf4fa1f7f026d8c63051c68a82d76bbae39c77
 EBUILD glade-2.12.2-r1.ebuild 894 RMD160 6e3e4253cb8f3d20ff1c02defe609b60ce78c785 SHA1 4faf0400f327704f45f6ea2af686b0bf8236e935 SHA256 c82a9053a86ff857783733e298259b1c09db44eda52d77b4acd673d4d9362e93
-EBUILD glade-3.4.0.ebuild 971 RMD160 af105701e183efd43187b6bbcc855df2905fe1d1 SHA1 752e96617857ef816a6538e36cc0052299307939 SHA256 b1b178991e8708ec68fdca18ac7a3c164630bc3ef03126d8ef2cdcf36e389cc2
-EBUILD glade-3.4.4.ebuild 1060 RMD160 7831f4f33b87ee0cbe03f4cd23b5efb1e19d2864 SHA1 397f82936347e4f2ade6a7a9d8e0c84983d40ebd SHA256 b53c9dab6ab797dd33024d313cfd5b16eef41c5ba383bf0d89de8e0f5978671b
 EBUILD glade-3.4.5.ebuild 1062 RMD160 bb4019019f9bb37a9beb4ef978f88cf515717458 SHA1 2413296dee95176bf31b1ea6aca913a3760e1cfe SHA256 de9cd82c4c3c80a048e1cf3d1c6216396a407f15865bb0de7d6dcc3d9122cb0f
-MISC ChangeLog 13530 RMD160 3344cdc89561307b3debcce8f1babfcc08da6383 SHA1 e353dde194be857a2622ae9bd3cab79f6fce19c1 SHA256 23afbf4a61b5f9e4062bd6dfd9a27fcb21f8a04e956fe82a09e288e1794154fe
+MISC ChangeLog 13655 RMD160 5e419f575b7d6a7205c01b6ae9f8e111081ae01b SHA1 9d44f9bd44f2a583ab529ef8352df108f2306f13 SHA256 3ee9a0cf4047a764f931c26cfecb9a0f8819c671901d3912a97aba148c98b83c
 MISC metadata.xml 221 RMD160 f7c500b4d0b46668c2ce4f6b9397face50ab80c2 SHA1 b78c278ada4bb68032eb139b0377fafbe1a23ca4 SHA256 3fc3c4c8d38e16d4437c4e745fbee3143d7bbbc45e134a9fe32ecbac4bbba2ac
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklimaQACgkQ1fmVwcYIWAYurwCeNKH1SVLXjYNWzvOb95Zft9GP
+KDkAoI8KhPhLUwT9B6gtwwV926rSNxtP
+=n13/
+-----END PGP SIGNATURE-----
